Fix a couple issues on Safari/iOS

--- a/wp-content/themes/twentythirteen-child/assets/style/global/work.less
+++ b/wp-content/themes/twentythirteen-child/assets/style/global/work.less
@@ -187,8 +187,7 @@
 	position: relative;
 	display: inline-flex;
 	width: 100%;
-	margin-top: 30px;
-	margin-bottom: 30px;
+	margin: 30px 5px 30px 5px;
 	cursor: pointer;
 }
 
