--- a/wp-content/themes/twentythirteen-child/assets/style/style.css
+++ b/wp-content/themes/twentythirteen-child/assets/style/style.css
@@ -1579,8 +1579,7 @@ a:hover .instagram_logo {
   position: relative;
   display: inline-flex;
   width: 100%;
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin: 30px 5px 30px 5px;
   cursor: pointer;
 }
 .archive_btn {
